--- a/src/components/HostAreaDescriptor/index.css
+++ b/src/components/HostAreaDescriptor/index.css
@@ -19,7 +19,7 @@
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
-    transition: 0.2s;
+    transition: var(--transition-duration-normal);
     opacity: 0;
 }
 
@@ -27,13 +27,13 @@
     opacity: 0.1;
 }
 
-.hostAreaDescriptor_button:hover {
+.hostAreaDescriptor .hostAreaDescriptor_button:hover {
     border-radius: 4px;
-    background-color: #8bb7d457;
-    opacity: 0.8 !important;
+    background-color: var(--color-action-selected);
+    opacity: 0.8;
 }
 
-.hostAreaDescriptor_button:active {
+.hostAreaDescriptor_button:hover:active {
     transform: scale(0.9);
 }
 
@@ -51,7 +51,7 @@
 
     font-size: 20px;
     font-weight: 600;
-    color: #222222;
+    color: var(--color-text-primary);
     text-overflow: ellipsis;
 }
 
@@ -60,6 +60,6 @@
     overflow: hidden;
 
     font-size: 14px;
-    color: #7e7e7e;
+    color: var(--color-text-secondary);
     text-overflow: ellipsis;
 }
