--- a/src/components/HostAreaDescriptor/index.css
+++ b/src/components/HostAreaDescriptor/index.css
@@ -49,7 +49,7 @@
     max-width: 600px;
     overflow: hidden;
 
-    font-size: 20px;
+    font-size: var(--size-text-title);
     font-weight: 600;
     color: var(--color-text-primary);
     text-overflow: ellipsis;
@@ -59,7 +59,6 @@
     max-width: 600px;
     overflow: hidden;
 
-    font-size: 14px;
     color: var(--color-text-secondary);
     text-overflow: ellipsis;
 }
