--- a/src/components/Popup/index.css
+++ b/src/components/Popup/index.css
@@ -11,6 +11,9 @@
 
     --border-normal: 1px solid var(--color-action-normal);
     --border-normal-light: 1px solid var(--color-action-normal-light);
+
+    --size-text-normal: 14px;
+    --size-text-title: 20px;
 }
 
 body {
@@ -18,6 +21,7 @@ body {
     margin: 0;
     font-family: "Titillium Web";
     user-select: none;
+    font-size: var(--size-text-normal);
 }
 
 .popup {
