--- a/src/components/Popup/index.css
+++ b/src/components/Popup/index.css
@@ -22,6 +22,7 @@ body {
     font-family: "Titillium Web";
     user-select: none;
     font-size: var(--size-text-normal);
+    min-width: 400px;
 }
 
 .popup {
