Fix some UI issues

--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -7,6 +7,7 @@
     transition: var(--transition-duration-normal);
 
     color: var(--color-text-primary);
+    cursor: pointer;
 }
 
 .button:hover {
