--- a/src/components/HostAreaDescriptor/index.css
+++ b/src/components/HostAreaDescriptor/index.css
@@ -2,12 +2,13 @@
     display: flex;
     align-items: center;
     white-space: nowrap;
+    padding: 8px;
+    cursor: pointer;
 }
 
 .hostAreaDescriptor_host {
     flex-grow: 1;
     padding: 0 24px 0 8px;
-    cursor: pointer;
 }
 
 .hostAreaDescriptor_button {
@@ -18,7 +19,6 @@
 
     background-repeat: no-repeat;
     background-position: center;
-    cursor: pointer;
     transition: var(--transition-duration-normal);
     opacity: 0;
 }
