--- a/src/components/Popup/index.css
+++ b/src/components/Popup/index.css
@@ -1,6 +1,7 @@
 :root {
     --color-text-primary: #222222;
     --color-text-secondary: #7e7e7e;
+    --color-text-error: #923333;
     
     --color-action-normal: #d4d4d4;
     --color-action-normal-light: #f7f7f7;
@@ -13,6 +14,7 @@
     --border-normal-light: 1px solid var(--color-action-normal-light);
 
     --size-text-normal: 14px;
+    --size-text-normal-focused: 15px;
     --size-text-title: 20px;
 }
 
